<resources>
    <string name="app_name">ARHMS</string>
    <string name="heart_rate_high">Heart Rate High</string>
    <string name="heart_rate_low">Heart Rate Low</string>
    <string name="temperature_high">Temperature High</string>
    <string name="temperature_low">Temperature Low</string>
    <string name="ok">Ok</string>
    <string name="user_metric">User Metric</string>
    <string name="settings">Settings</string>
    <string name="heart_rate_monitor">Heart Rate Monitor</string>
    <string name="temperature_monitor">Temperature Monitor</string>
    <string name="notification">Notification</string>
    <string name="heart_rate_widget">Heart Rate Widget</string>
    <string name="temperature_widget">Temperature Widget</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="temperature">Temperature</string>
    <string name="rexRunGame">Rex Run Game</string>
</resources>